--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "modules/firewall"]
 	path = modules/firewall
 	url = git@github.com:puppetlabs/puppetlabs-firewall.git
+[submodule "modules/git"]
+	path = modules/git
+	url = git://github.com/nesi/puppet-git.git
